spacing fix on mobile scoreboard numbers

--- a/style.css
+++ b/style.css
@@ -145,6 +145,8 @@
     .numbers {
         width: max-content;
         margin: 0 auto;
+        display: flex;
+        align-items: center;
     }
     .week {
         display: grid;
